# openshift-virtualization-coverage-reports

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  config.test.yaml  pyproject.toml
.github/workflows/: build.yaml
deploy/: cronjob.yaml  deployment.yaml  pvc.yaml  secret.yaml.example
src/coverage_reports/: __init__.py  analysis.py  cli.py  config.py  report.py  rp_checker.py  rp_client.py  server.py
src/coverage_reports/collectors/: __init__.py  base.py  pytest_collector.py
src/coverage_reports/templates/: base.html  index.html  version.html
tests/: test_analysis.py  test_config.py  test_pytest_collector.py  test_report.py  test_rp_checker.py
