[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openshift-virtualization-coverage-reports"
version = "0.1.0"
description = "Test coverage report generator for OpenShift Virtualization — queries ReportPortal, collects tests, generates static HTML reports"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Red Hat QE" },
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "requests>=2.31",
    "jinja2>=3.1",
    "urllib3>=2.0",
]

[project.scripts]
coverage-reports = "coverage_reports.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coverage_reports"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
